<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/app_login"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/app_login_username"
        android:textSize="15sp"/>


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/app_login_password"
        android:inputType="textPassword"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/app_login_btnlogin"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/app_login_btnsignup"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
