<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiLangActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/app_login"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/app_login_username"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/app_login_password"
        android:inputType="textPassword"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/app_login_btnlogin"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/app_login_btnsignup"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout >